//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  accounts Account [not null]
  stats Stat [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Account {
  id String [pk]
  userId String [not null]
  user User [not null]
  name String [not null]
  bank String [not null]
  balance Float [not null]
  transactions Transaction [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Transaction {
  id String [pk]
  accountId String [not null]
  account Account [not null]
  amount Float [not null]
  type String [not null]
  description String
  date DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Stat {
  id String [pk]
  userId String [unique, not null]
  user User [not null]
  runway Float [not null]
  monthlyOutgoing Float [not null]
  monthlyIncoming Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Account.userId > User.id

Ref: Transaction.accountId > Account.id

Ref: Stat.userId > User.id